old_tests/tests/lean/import_middle.lean.expected.out
hello
import_middle.lean:5:0: error: invalid 'import' command, it must be used in the beginning of the file
