old_tests/tests/lean/import_middle.lean
import data.buffer

#print "hello"

import data.dlist
